--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -48,7 +48,7 @@
     <script src="app/scripts/todoListCtrl.js"></script>
     <script src="app/scripts/todoListSvc.js"></script>
     <script type="text/javascript">
-        var apiEndpoint = ""; // URL of the REST API in Azure App Service http://<appname>.azurewebsites.net
+        var apiEndpoint = "http://dotnet-core-api-rnd.azurewebsites.net"; // URL of the REST API in Azure App Service http://dotnet-core-api-rnd.azurewebsites.net
     </script>
 </body>
 </html>
